<resources>
    <string name="app_name">Quote Catalog</string>
    <!-- Strings used for settings menu -->
    <string name="menu_add_quote">Add Quote</string>
    <string name="menu_enable_permissions">Enable Permissions</string>
    <!-- Strings used for fragments -->
    <string name="bg_select_text">Please select a background colour:</string>
    <string name="color_select_text">Please select  the text colour:</string>
    <string name="create_intro">Enter your quote below:</string>
    <string name="create_bg_color">Change Background Colour:</string>
    <string name="create_txt_color">Change Text Colour:</string>
    <string name="create_hint">Enter your quote</string>
    <string name="create_save">Save Quote</string>
    <!-- Strings used for fragments for navigation -->
    <string name="browse_fragment_label">Browse Quotes</string>
    <string name="create_fragment_label">Create Quote</string>
    <string name="bg_color_fragment_label">Select Background Colour</string>
    <string name="txt_color_fragment_label">Select Text Colour</string>
    <!-- Strings for Fragments -->
    <string name="browse_intro">Browse Quotes, Search Quotes,\nand Add (+) Quotes</string>
    <string name="browse_search_hint">Search Quotes</string>
    <string name="browse_btn_search">Search</string>
    <string name="browse_btn_clear">Clear</string>
    <string name="quote_stored">Quote Saved</string>
    <!-- Permissions warning -->
    <string name="permissions_warning">
        To enable the Download and Share\nfeatures, select \'Enable Permissions\'\nfrom the Settings menu
    </string>
    <string name="permissions_confirmation">Permissions already enabled</string>
    <string name="permissions_success">Permissions enabled</string>
    <!-- Event handler status messages -->
    <string name="status_downloaded">Image Downloaded</string>
    <string name="status_shared">Image Shared</string>
    <string name="status_exists">Image already exists</string>
    <string name="status_no_permissions">Permissions not enabled</string>
    <string name="status_error">Operation not completed</string>
</resources>