<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_300"
        android:orientation="vertical"
        android:paddingStart="@dimen/generalMarginStart"
        android:paddingTop="@dimen/selectMarginTop"
        android:paddingEnd="@dimen/generalMarginEnd"
        tools:context=".browse.BrowseFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/browse_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/browse_intro"
                android:textSize="@dimen/titleTextSize" />

            <ImageButton
                android:id="@+id/browse_btn_add_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_input_add" />

        </FrameLayout>

        <EditText
            android:id="@+id/browse_search_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/browse_search_hint"
            android:inputType="textShortMessage" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/browse_btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/browse_btn_search" />

            <Button
                android:id="@+id/browse_btn_clear_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/browse_btn_clear" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/selectMarginTop" />
    </LinearLayout>
</layout>