<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/BrowseFragment">

    <fragment
        android:id="@+id/BrowseFragment"
        android:name="com.example.android.quote_catalog.browse.BrowseFragment"
        android:label="@string/browse_fragment_label"
        tools:layout="@layout/fragment_browse">

        <action
            android:id="@+id/action_BrowseFragment_to_CreateFragment"
            app:destination="@id/CreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/CreateFragment"
        android:name="com.example.android.quote_catalog.create.CreateFragment"
        android:label="@string/create_fragment_label"
        tools:layout="@layout/fragment_create">
        <action
            android:id="@+id/action_CreateFragment_to_BgColorFragment"
            app:destination="@id/BgColorFragment" />
        <action
            android:id="@+id/action_CreateFragment_to_TxtColorFragment"
            app:destination="@id/TxtColorFragment" />
        <argument
            android:name="bundleBgColor"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="bundleTxtColor"
            app:argType="integer"
            android:defaultValue="-16777216" />
        <argument
            android:name="bundleQuoteTxt"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/BgColorFragment"
        android:name="com.example.android.quote_catalog.create.BgColorFragment"
        android:label="@string/bg_color_fragment_label"
        tools:layout="@layout/fragment_bg_color">
        <action
            android:id="@+id/action_BgColorFragment_to_CreateFragment"
            app:destination="@id/CreateFragment"
            app:popUpTo="@id/BrowseFragment" />
        <argument
            android:name="bundleBgColor"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="bundleTxtColor"
            app:argType="integer"
            android:defaultValue="-16777216" />
        <argument
            android:name="bundleQuoteTxt"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/TxtColorFragment"
        android:name="com.example.android.quote_catalog.create.TxtColorFragment"
        android:label="@string/txt_color_fragment_label"
        tools:layout="@layout/fragment_txt_color">
        <action
            android:id="@+id/action_TxtColorFragment_to_CreateFragment"
            app:destination="@id/CreateFragment"
            app:popUpTo="@id/BrowseFragment" />
        <argument
            android:name="bundleBgColor"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="bundleTxtColor"
            app:argType="integer"
            android:defaultValue="-16777216" />
        <argument
            android:name="bundleQuoteTxt"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
</navigation>